--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -15,6 +15,22 @@ html,
 body {
   height: 100%;
 }
+
+.dropdown::before {
+  width: 3rem;
+  height: 3rem;
+  content: " ";
+  background-color: red;
+  border: 2px;
+  top: 0px;
+  position: absolute;
+  right: 30px;
+  rotate: 45deg;
+  background-color: red;
+
+  z-index: -1;
+}
+
 .scrollbar-hidden::-webkit-scrollbar {
   display: none;
 }
