--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -13,10 +13,10 @@
 
 html,
 body {
-  height: 100%;
+  height: 100svh;
 }
 
-.dropdown::before {
+/* .dropdown::before {
   width: 3rem;
   height: 3rem;
   content: " ";
@@ -29,12 +29,25 @@ body {
   background-color: red;
 
   z-index: -1;
-}
+} */
 
+.image {
+  object-fit: cover;
+  object-position: top;
+}
 .scrollbar-hidden::-webkit-scrollbar {
   display: none;
+  width: 0px;
 }
-
+::-webkit-scrollbar {
+  width: 8px;
+}
+::-webkit-scrollbar-track {
+  background-color: white;
+}
+::-webkit-scrollbar-thumb {
+  background-color: gray;
+}
 .chat {
   box-sizing: border-box;
 }
