--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -41,12 +41,15 @@ body {
 }
 ::-webkit-scrollbar {
   width: 8px;
+  border-radius: 10px;
 }
 ::-webkit-scrollbar-track {
   background-color: white;
+  border-radius: 10px;
 }
 ::-webkit-scrollbar-thumb {
   background-color: gray;
+  border-radius: 10px;
 }
 .chat {
   box-sizing: border-box;
